Update integration name to 'Weishaupt WBB (RG-Version)' for differentiation

--- a/custom_components/weishaupt_modbus/manifest.json
+++ b/custom_components/weishaupt_modbus/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "weishaupt_modbus",
-  "name": "Weishaupt WBB",
+  "name": "Weishaupt WBB (RG-Version)",
   "codeowners": [
-    "@OStrama, @MadOne"
+    "@OStrama, @MadOne, @granmeloco"
   ],
   "config_flow": true,
   "documentation": "https://github.com/OStrama/weishaupt_modbus/",
