--- a/custom_components/weishaupt_modbus/manifest.json
+++ b/custom_components/weishaupt_modbus/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "weishaupt_modbus_rg",
+  "domain": "weishaupt_modbus",
   "name": "Weishaupt WBB (RG-Version)",
   "codeowners": [
     "@OStrama, @MadOne, @granmeloco"
