--- a/custom_components/weishaupt_modbus/manifest.json
+++ b/custom_components/weishaupt_modbus/manifest.json
@@ -2,12 +2,12 @@
   "domain": "weishaupt_modbus",
   "name": "Weishaupt WBB (RG-Version)",
   "codeowners": [
-    "@OStrama, @MadOne, @granmeloco"
+    "@granmeloco"
   ],
   "config_flow": true,
-  "documentation": "https://github.com/OStrama/weishaupt_modbus/",
+  "documentation": "https://github.com/granmeloco/weishaupt_modbus_RG/",
   "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/OStrama/weishaupt_modbus/issues",
+  "issue_tracker": "https://github.com/granmeloco/weishaupt_modbus_RG/issues",
   "loggers": [
     "weishaupt_modbus"
   ],
